[package]
name = "tyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
# serde_json = "1.0.111"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
