[package]
name = "tyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
flate2 = "1.0.28"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
semver = "1.0.21"
# serde_json = "1.0.111"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
tar = "0.4.40"
ureq = { version = "2.9.1", features = ["json", "charset"] }
