[package]
name = "tyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo"] }
console = "0.15.8"
dialoguer = "0.11.0"
flate2 = "1.0.28"
indicatif = "0.17.7"
is-even = "1.0.0"
itertools = "0.12.0"
nodejs-semver = "3.4.0"
qndr = "0.1.7"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
semver = "1.0.21"
# serde_json = "1.0.111"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
tar = "0.4.40"
termcolor = "1.4.1"
ureq = { version = "2.9.1", features = ["json", "charset"] }
url = "2.5.0"
yarn-lock-parser = "0.6.0"
